--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,12 @@
+[metadata]
+description-file = README.rst
+
+[bdist_wheel]
+universal=1
+
 [egg_info]
 tag_build = 
 tag_date = true
-tag_svn_revision = yes
 
 [aliases]
 release = egg_info -RDb ''
