--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,11 @@ tag_date = true
 
 [aliases]
 release = egg_info -RDb ''
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/bcdaqwidgets/_version.py
+versionfile_build = bcdaqwidgets/_version.py
+tag_prefix =
+parentdir_prefix = bcdaqwidgets- 
